Update SEO + Open Graph metadata

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A modern React frontend application built with Vite, TypeScript, and Tailwind CSS." />
-    <meta name="theme-color" content="#222222" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Tư tưởng Hồ Chí Minh" />
+    <meta property="og:title" content="Tư tưởng Hồ Chí Minh – Đại đoàn kết toàn dân tộc" />
+    <meta property="og:description" content="Khái quát vai trò, lực lượng, nguyên tắc và hình thức tổ chức khối đại đoàn kết toàn dân tộc theo tư tưởng Hồ Chí Minh." />
+    <meta property="og:url" content="https://hcm202-seven.vercel.app/" />
+    <meta property="og:image" content="https://hcm202-seven.vercel.app/og-cover.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tư tưởng Hồ Chí Minh – Đại đoàn kết toàn dân tộc" />
+    <meta name="twitter:description" content="Trình bày hệ thống và trực quan về tư tưởng đại đoàn kết của Chủ tịch Hồ Chí Minh." />
+    <meta name="twitter:image" content="https://hcm202-seven.vercel.app/og-cover.png" />
+    
     <title>Tư tưởng Hồ Chí Minh – Đại đoàn kết dân tộc</title>
   </head>
   <body>
