--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta property="og:title" content="Tư tưởng Hồ Chí Minh – Đại đoàn kết toàn dân tộc" />
     <meta property="og:description" content="Khái quát vai trò, lực lượng, nguyên tắc và hình thức tổ chức khối đại đoàn kết toàn dân tộc theo tư tưởng Hồ Chí Minh." />
     <meta property="og:url" content="https://hcm202-seven.vercel.app/" />
-  
+    <meta property="og:image" content="https://hcm202-seven.vercel.app/og-cover.png" />
+
     <!-- Twitter Card tối giản -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Tư tưởng Hồ Chí Minh – Đại đoàn kết toàn dân tộc" />
